k3s/dashbord-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.ph-rustingheart.dns-dynamic.net
    http: 
    paths:
    - backend:
      service:
        name: kubernetes-dahboard
        port: 80
--
apiVersion: v1
kind: Service
metadata: 
  name: default-http-backend
spec:
  selector:
    app: default-response-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
